hard-gists/477a9dcd198439ef2def/run.log
=== Docker Run Log for 477a9dcd198439ef2def ===
Started at: Mi 29. Okt 15:01:13 CET 2025

[2025-10-29 15:01:13] START: Running container for 477a9dcd198439ef2def
[2025-10-29 15:01:14] SUCCESS: Container ab8c9e42dbe47d4815fb54d839cc3c7c2e3d7db3dda0c38e27be3621e7445e11 started for 477a9dcd198439ef2def
=== Container logs for 477a9dcd198439ef2def ===
  File "/snippet.py", line 27
    print __doc__
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 477a9dcd198439ef2def ===
[2025-10-29 15:01:16] INFO: Container ab8c9e42dbe47d4815fb54d839cc3c7c2e3d7db3dda0c38e27be3621e7445e11 has stopped
